# agentreviewops

./: .agentreview.example.yml  .agentreview.yml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: action-self-test.yml  agentreview.yml  ci.yml  tests.yml
apps/web/: README.md  index.html  package-lock.json  package.json
deploy/: api.Dockerfile  docker-compose.yml  web.Dockerfile  web.nginx.conf
docs/: audit-events.md  cli.md  github-action.md  index.md  plugins.md  policy-bundles.md  release.md  sarif.md  self-hosting.md  troubleshooting.md  v0-readiness.md
examples/: report.md  sample.diff
examples/github-action/: action.yml
scripts/: verify_dashboard.py
src/agentreview/: __init__.py  ai.py  analysis.py  analysis_output.py  checks.py  cli.py  config.py  example_plugins.py  gitdiff.py  github_reviewers.py  models.py  plugins.py  policy_bundles.py  report.py  risk.py  routing.py  sarif.py  security.py
tests/: test_admin_bootstrap.py  test_ai.py  test_analysis_output.py  test_checks.py  test_cli.py  test_cli_e2e.py  test_config.py  test_deploy.py  test_gitdiff.py  test_github_action_example.py  test_github_integration.py  test_github_reviewers.py  test_plugins.py  test_policy_bundles.py  test_report.py  test_risk.py  test_routing.py  test_sarif.py  test_security.py  test_web_dashboard.py
tests/api/: test_api.py  test_audit.py  test_migrations.py
tests/fixtures/: docs_only.diff  rename.diff  (+1 more)
(+67 files in other folders)
