[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentreviewops"
version = "0.1.0"
description = "CLI-first quality gate for AI-generated pull requests."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "AgentReviewOps contributors" }
]
keywords = ["ai", "code-review", "github", "pull-requests", "governance"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2,<3",
  "psycopg[binary]>=3.2,<4",
  "SQLAlchemy>=2.0,<3",
  "typer>=0.12,<1",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.60,<2",
  "pytest>=8,<9",
]

[project.scripts]
agentreview = "agentreview.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/agentreview", "apps/api/agentreview_api"]
